--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
     "imageUrl": "https://raw.githubusercontent.com/G-grbz/Jellyfin-MonWUI-Plugin/main/img/icon.png",
     "versions": [
       {
+        "version": "1.7.5.0",
+        "changelog": "Fix",
+        "targetAbi": "10.10.0.0",
+        "sourceUrl": "https://github.com/G-grbz/Jellyfin-MonWUI-Plugin/releases/download/v1.7.0/JMSFusion-1.7.5.0-server.zip",
+        "checksum": "75f1d50e0e3b0d12a8a80358f2746aac",
+        "timestamp": "2026-01-12T14:17:20.5371762Z"
+      },
+      {
         "version": "1.7.4.0",
         "changelog": "Fix",
         "targetAbi": "10.10.0.0",
