--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,14 @@
     "category": "General",
     "imageUrl": "https://raw.githubusercontent.com/G-grbz/Jellyfin-MonWUI-Plugin/main/img/icon.png",
     "versions": [
+    {
+        "version": "1.8.1.0",
+        "changelog": "Optionally prevent non-admin users from modifying monWUI settings. / https://github.com/G-grbz/Jellyfin-MonWUI-Plugin/releases/tag/v1.8.0",
+        "targetAbi": "10.10.0.0",
+        "sourceUrl": "https://github.com/G-grbz/Jellyfin-MonWUI-Plugin/releases/download/v1.8.0/JMSFusion-1.8.1.0-server.zip",
+        "checksum": "913db3bcdbfa269f191c25316b7f9666",
+        "timestamp": "2026-02-19T18:30:14.6554494Z"
+      },
       {
         "version": "1.8.0.0",
         "changelog": "https://github.com/G-grbz/Jellyfin-MonWUI-Plugin/releases/tag/v1.8.0",
